<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popular Photos</string>
    <string name="moreComments"><u>more</u></string>
    <string name="testCaption">this is a test caption</string>
    <string name="username">username</string>
    <string name="commentFrom">comment from</string>
    <string name="postedBy">posted by</string>
    <string name="likeCount">42</string>
    <string name="likes">Likes</string>
    <string name="postedTime">10 mins ago</string>
    <string name="title_activity_comments">All Comments</string>
    <string name="clickToPlayVideo">CLICK TO PLAY</string>
    <string name="title_activity_video_play">Video Player</string>
    <string name="title_activity_popular_media">What\'s Popular on Instagram</string>

</resources>
