<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="10dp" android:paddingRight="10dp" android:paddingLeft="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ivCommenterPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:scaleType="fitCenter"
        app:riv_corner_radius="30dip"
        app:riv_border_width="2dip"
        app:riv_border_color="@android:color/holo_red_light"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentFrom"
        android:id="@+id/tvCommentFrom"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivCommenterPhoto"
        android:layout_toEndOf="@+id/ivCommenterPhoto"
        android:layout_marginRight="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/tvCommenterUsername"
        android:minHeight="100dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvCommentFrom"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tvCommentFrom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testCaption"
        android:id="@+id/tvComment"
        android:textSize="20sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_below="@+id/tvCommentFrom"
        android:layout_toRightOf="@+id/ivCommenterPhoto"
        android:layout_alignRight="@+id/tvCommenterUsername"
        android:layout_alignEnd="@+id/tvCommenterUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postedTime"
        android:id="@+id/tvPostedTime"
        android:layout_below="@+id/tvComment"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="4dp"/>

</RelativeLayout>