<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rlTopBar"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postedTime"
            android:id="@+id/tvPostedTime"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes"
            android:textColor="@android:color/holo_green_light"
            android:id="@+id/tvLikes"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likeCount"
            android:textColor="@android:color/holo_green_light"
            android:id="@+id/tvLikeCount"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tvLikes"
            android:layout_toStartOf="@+id/tvLikes" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTopBar"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivPhoto"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:minHeight="50dp"
            />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/play_button"
            android:id="@+id/ivClickToPlayVideo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:visibility="invisible"/>

        <!--<TextView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
            <!--android:text="@string/clickToPlayVideo"-->
            <!--android:background="#cc000000"-->
            <!--android:id="@+id/tvClickToPlayVideo"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:visibility="invisible"/>-->

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlPhoto"
        android:id="@+id/rlUser"
        android:padding="10dp">

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivUserPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="@android:color/holo_blue_light"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="this is a test caption"
            android:id="@+id/tvCaption"
            android:textSize="20sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_below="@+id/tvPostedBy"
            android:layout_toRightOf="@+id/ivUserPhoto"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postedBy"
            android:id="@+id/tvPostedBy"
            android:layout_marginRight="4dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivUserPhoto"
            android:layout_toEndOf="@+id/ivUserPhoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/holo_blue_light"
            android:id="@+id/tvUsername"
            android:minHeight="100dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignTop="@+id/tvPostedBy"
            android:layout_toRightOf="@+id/tvPostedBy"
            android:layout_alignBottom="@+id/tvPostedBy"
            android:layout_alignRight="@+id/tvCaption"
            android:layout_alignEnd="@+id/tvCaption" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlUser"
        android:id="@+id/rlComment1"
        android:padding="10dp"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivCommenterPhoto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="@android:color/holo_red_light"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentFrom"
            android:id="@+id/tvCommentFrom1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivCommenterPhoto1"
            android:layout_toEndOf="@+id/ivCommenterPhoto1"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/tvCommenterUsername1"
            android:minHeight="100dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvCommentFrom1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tvCommentFrom1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testCaption"
            android:id="@+id/tvComment1"
            android:textSize="20sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_below="@+id/tvCommentFrom1"
            android:layout_toRightOf="@+id/ivCommenterPhoto1"
            android:layout_alignRight="@+id/tvCommenterUsername1"
            android:layout_alignEnd="@+id/tvCommenterUsername1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rlComment1"
        android:id="@+id/rlComment2"
        android:padding="10dp"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivCommenterPhoto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:minHeight="30dp"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="@android:color/holo_red_light"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentFrom"
            android:id="@+id/tvCommentFrom2"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivCommenterPhoto2"
            android:layout_toEndOf="@+id/ivCommenterPhoto2"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/tvCommenterUsername2"
            android:minHeight="100dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvCommentFrom2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/tvCommentFrom2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testCaption"
            android:id="@+id/tvComment2"
            android:textSize="20sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_below="@+id/tvCommentFrom2"
            android:layout_toRightOf="@+id/ivCommenterPhoto2"
            android:layout_alignRight="@+id/tvCommenterUsername2"
            android:layout_alignEnd="@+id/tvCommenterUsername2" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/moreComments"
        android:textColor="@android:color/white"
        android:id="@+id/tvMoreComments"
        android:paddingBottom="4dp"
        android:paddingRight="4dp"
        android:layout_below="@+id/rlComment2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>